# videocall-rs

./: Cargo.toml  Dockerfile.video-daemon
actix-api/: Cargo.toml
actix-api/src/webtransport/: mod.rs
helm/rustlemania-ui/: values.yaml
helm/rustlemania-webtransport/: values.yaml
types/src/: lib.rs
types/src/protos/: connection_packet.rs  packet_wrapper.rs
video-daemon/: Cargo.toml  README.md  build-raspy.sh
video-daemon/src/: camera.rs  client.rs  lib.rs  main.rs  quic.rs  video_encoder.rs
yew-ui/: Cargo.toml
yew-ui/src/: constants.rs  main.rs
yew-ui/src/components/: attendants.rs
yew-ui/static/: tailwind.css
